Closed
Bug 1370927
Opened 8 years ago
Closed 8 years ago
Two-part vowels are misrendered with default Oriya font
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla58
Tracking | Status | |
---|---|---|
firefox58 | --- | fixed |
People
(Reporter: corbett.dav, Assigned: jfkthame)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:54.0) Gecko/20100101 Firefox/54.0
Build ID: 20170601133324
Steps to reproduce:
I rendered the following in macOS 10.11.5. ⟨ଖୋ⟩ is an Oriya consonant with a two-part vowel. Oriya MN is the default Oriya serif font in Firefox on macOS.
data:text/html;charset=utf-8,<div style="font: 100px Oriya MN">%E0%AC%96%E0%AD%8B
Actual results:
The text was rendered: consonant, left vowel part, dotted circle, right vowel part, right vowel part.
Expected results:
The text should have been rendered: left vowel part, consonant, right vowel part.
This bug also happens with Oriya Sangam MN, another default Mac font. It also happens with other Oriya consonants and two-part vowels. It does not happen with other Indic scripts in other AAT fonts in Firefox; e.g. ⟨ഖോ⟩ looks correct with Malayalam MN. It does not happen with default macOS programs like TextEdit. It does not happen with hb-shape 1.4.6:
$ echo ଖୋ | hb-shape '/Library/Fonts/Oriya MN.ttc'
[ori_e_matra=0+886|ori_kha=0+1240|ori_aa_matra=0+296]
Updated•8 years ago
|
Component: Untriaged → Layout: Text
Product: Firefox → Core
Updated•8 years ago
|
Priority: -- → P3
Assignee | ||
Comment 1•8 years ago
|
||
Sigh... buggy Apple fonts strike again. We've fixed (or rather, hacked around) this issue for a couple of scripts previously, but it seems Oriya needs the same treatment.
Attachment #8917448 -
Flags: review?(jmuizelaar)
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → jfkthame
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•8 years ago
|
Attachment #8917448 -
Flags: review?(jmuizelaar) → review+
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d6c441551c09
For Oriya AAT fonts (as for Bengali and Kannada) enable the Line Initial Smart Swashes feature, which is (incorrectly) required for split-vowel matras to render properly. r=jrmuizel
![]() |
||
Comment 3•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in
before you can comment on or make changes to this bug.
Description
•