Bug 1370927 - For Oriya AAT fonts (as for Bengali and Kannada) enable the Line Initial Smart Swashes feature, which is (incorrectly) required for split-vowel matras to render properly. r=jrmuizel